<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/ll_patient_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_update_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="14sp"
            android:visibility="gone"
            android:text=""/>

        <TextView
            android:id="@+id/tv_update_record_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="14sp"
            android:visibility="gone"
            android:text=""/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="Patient Information :"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Name" />

        <EditText
            android:id="@+id/tv_age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Age"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="Gender :"
            android:textSize="16sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rg_gender_male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Male"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rg_gender_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Female"
                android:textSize="15sp" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="Does the patient have migraines?"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_migraines"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rg_migraines_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Yes"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rg_migraines_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="No"
                android:textSize="15sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="Has patient used any hallucinogenic drugs?"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_hdrugs"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rg_hdrugs_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Yes"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rg_hdrugs_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="No"
                android:textSize="15sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_check_todd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:text="Check Todd's Syndrome" />

            <Button
                android:id="@+id/button_clear_info"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="Clear Info"/>

        </LinearLayout>


        <Button
            android:id="@+id/button_old_patient_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Old patient"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>
